27. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- progressbar at busydialog on loading/parsing file added
	- display more informative text in busydialog on loading/parsing file
	- made uinit in node sizedialog translateable

26. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- support for importing comment and category at Kat-CeDe and Disclib added
	- progressbar at csv import fixed
	- q3textstream replaced by qtextstream at import
	- q3progressdialog replaced by qprogressdialog at import
	- language selector at preferencesdialog at osx added

25. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- csv import added (Disclib)
	- dont give a error message if same name at rename dialog
	- dont give a error message if same number at renumber dialog
	- use last used path for directory at export
	- generate standard html header
	- us utf8 as encoding at html export 
	- display export date in report
	- media number, mp3tag and borrow information can be exported now
	- csv export allows now to select fields for export
	- crash at searching fixed

24. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- scanning cdrom/dvd if no cdrom path is set fixed (win32)
	- wrong translation fixed (thanks to Thomas Nehrenheim)
	- csv import added (Kat-CeDe)
	- media number/name at comment widget moved below type
	- do automatic linebreak in comment widget if comment has oversized lines (>40 chars)
	- display size units correctly (Kib, Mib, ...)
	- made size units translateable
	- workaround for displaying rubberband again (win32)
	- scanning non cdrom fixed (linux)
	- displaying error message if cd/dvd could not mounted (linux)

22. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- save last dir on open catalog
	- use qt4 filedialogs
	-  use qxmlsimplereader instead of expat for xml import
	- import datetime for media fixed

21. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
	- detect uncompressed file size added
	- test for enough memory at catalog reading added