@@ -20,7 +20,7 @@ Copyright : (C) 2003 Christoph Thielecke
 #include <qpixmap.h>
 #include <qtooltip.h>
 #include <qmessagebox.h>
-#include <q3textstream.h>
+#include <qtextstream.h>
 #include <qapplication.h>
 #include <qstring.h>
 #include <qregexp.h>
@@ -503,8 +503,8 @@ void exportCdcatDB::ok() {
         if ( !f.exists() || overwrite == QMessageBox::Yes ) {
             //QApplication::setOverrideCursor( waitCursor );
             if ( f.open ( QIODevice::WriteOnly ) ) {
-                Q3TextStream str ( &f );   // we will serialize the data into file f
-                str.setEncoding ( Q3TextStream::UnicodeUTF8 );
+                QTextStream str ( &f );   // we will serialize the data into file f
+                str.setEncoding ( QTextStream::UnicodeUTF8 );
                 //str << " # output generated by cdcat" << endl;
                 writeDown ( p->getRootNode() );
 
